@@ -1,3 +1,3 @@
-# $Id: .htaccess,v 1.1.2.1 2005-01-07 13:59:57 rurban Exp $
+# $Id: .htaccess,v 1.1.2.2 2005-01-07 14:02:26 rurban Exp $
 order allow,deny
 Deny from all
