@@ -1,4 +1,4 @@
-<!-- $Id: editlinks.php,v 1.1.2.1 2005-01-07 13:59:58 rurban Exp $ -->
+<!-- $Id: editlinks.php,v 1.1.2.2 2005-01-07 14:02:28 rurban Exp $ -->
 <?php
    // Thanks to Alister <alister@minotaur.nu> for this code.
    // This allows an arbitrary number of reference links.
