@@ -1,4 +1,4 @@
-<?php rcs_id('$Id: pgsql.php,v 1.4.2.7 2005-01-07 13:59:58 rurban Exp $');
+<?php rcs_id('$Id: pgsql.php,v 1.4.2.8 2005-01-07 14:02:28 rurban Exp $');
 
    /*
       Database functions:
@@ -345,8 +345,6 @@ function BackLinkSearchNextMatch($dbi, &$res) {
 
       return $hits;
    }
-
-
 
    function InitMostPopular($dbi, $limit) {
 
