@@ -1,6 +1,6 @@
 <?php
    // Title search: returns pages having a name matching the search term
-   rcs_id('$Id: search.php,v 1.3.2.3 2005-01-07 13:59:59 rurban Exp $');
+   rcs_id('$Id: search.php,v 1.3.2.4 2005-01-07 14:02:28 rurban Exp $');
 
    if(get_magic_quotes_gpc())
       $search = stripslashes($search);
