@@ -1,3 +1,3 @@
-# $Id: .htaccess,v 1.2.2.1 2005-01-07 14:00:00 rurban Exp $
+# $Id: .htaccess,v 1.2.2.2 2005-01-07 14:02:30 rurban Exp $
 order allow,deny
 Deny from all
