@@ -1,4 +1,4 @@
-<!-- $Id: dumpserial.php,v 1.1.2.1.2.2 2005-01-07 13:59:57 rurban Exp $ -->
+<!-- $Id: dumpserial.php,v 1.1.2.1.2.3 2005-01-07 14:02:27 rurban Exp $ -->
 
 <?php
    /*
